<h5>2.0.2 Beta1</h5> [2024/04/23]
- add AJAX modal window (mamba)
- cosmetics (mamba)
- added extended block (goffy)
- updated jquery (goffy)
- PHP 8.4 compatibility (mamba)

<h5>2.0.1 RC2</h5> [2024/03/07]
 - fixed problems with bootstrap 5 (mamba/goffy)

<h5>2.0.1 RC1</h5> [2023/03/09]
 - fixed bug in feedback (goffy)
 - updates for XOOPS 2.5.11 Stable (goffy)

<h5>2.0.0 Stable</h5> [2023/02/28]
 - moved to last stable with smarty 2 (goffy)

<h5>2.0.0 Beta1</h5> [2021/12/29]
<hr>
 - semantic versioning (goffy)
 - declare strict_types (goffy)
 - index.php instead index.html (goffy)
 - default values in tpl files (goffy)
 - fixed bug with missing image (goffy)
 - function qualifiers (goffy)
 - replaced tabs (goffy)
 - dirname levels (goffy)
 - php inspection code (goffy)
 - security.md (goffy)
 - new update with db migration (goffy)
 - replaced Common/XoopsConfirm by Common/Confirm (mamba/goffy)
 - uninstall with bak-file creation (mamba/goffy)
 - added clone feature (goffy)
 - adapted update due to new semantic versioning (goffy)
 - fixed bug in MigrateHelper (goffy)
 
<h5>1.10 Final</h5> [2020/07/03]
<hr>
 - moved to final (goffy)
 - default value for new relation 999 to show them at the end of the list (goffy)
 
<h5>1.10 RC1</h5> [2020/02/09]
<hr>
 - added maintenance / cleaning unused images (goffy)
 - fixed bug with mimetype when cropping image (goffy)
 - added maintenance / check space (goffy)

<h5>1.09 RC4</h5> [2019/09/17]
<hr>
 - added option to resize image during upload or not (goffy)
 - added new block style 'list' (goffy)
 - added filter team in admin/relations (goffy)
 - added info about conditions for image upload (goffy)
 - fixed missing check of allowed resolution (goffy)
 
<h5>1.09 RC3</h5> [2019/09/17]
<hr>
 - fixed bug image editor (goffy) 
 - new preference for default size image editor (goffy)
 - new preference for show/hide copyright (goffy)
 - fixed bug with upload very big jpg images (goffy)
 - fixed bug with cropping images (goffy)
 